setted line-height of "#main col-2 h1"

--- a/biw-email-confirmation.html
+++ b/biw-email-confirmation.html
@@ -53,7 +53,7 @@
 								<img src="https://i.imgur.com/BGM60Ra.jpg" style="width: 100%; display: block;">
 							</td>
 							<td class="col-2" style="padding: 10px; background-color: #fff; font-family: Arial, Helvetica, sans-serif; display: block;">
-								<h1 style="color: #0c7a91; font-size: 20px; text-align: center;">BIW Email Confirmation</h1>
+								<h1 style="color: #0c7a91; font-size: 20px; text-align: center; line-height: 1;">BIW Email Confirmation</h1>
 								<p style="margin-top: 20px; color: #9ba3b1; font-size: 13px; text-align: center;">Before we complete your subcribtion to our newsletter, please confirm your email address by pressing the confirm button below.</p>
 								<p style=" margin-top: 50px; text-align: center;">
 									<a href="#" style="color: #fff; background-color: #1f7599; font-size: 14px; text-decoration: none; padding-top: 10px; padding-bottom: 10px; padding-left: 30px; padding-right: 30px;">Confirm</a>
