--- a/biw-email-confirmation.html
+++ b/biw-email-confirmation.html
@@ -40,6 +40,39 @@
 	</style>
 </head>
 	<body style="margin: 0; padding: 0; height: 100%">
+		<style>
+			@media (min-width: 350px) {
+				#main .col-2 {
+					padding: 30px!important;
+				}
+			}
+			@media (min-width: 580px) {
+				#main {
+					max-width: 680px!important;
+				}
+				#main td {
+					display: table-cell!important;
+					width: 50%;
+				}
+				#main .col-2 h1 {
+					text-align: left!important;
+				}
+				#main .col-2 p {
+					text-align: left!important;
+				}
+			}
+			@media (min-width: 680px) {
+				#bg {
+					padding: 20px!important;
+				}
+				#main .col-2 h1 {
+					font-size: 30px!important;
+				}
+				#main .col-2 p {
+					font-size: 15px!important;
+				}
+			}
+		</style>
 
 		
 
