added css background-color property in hover pseudo class for .btn class/element

--- a/biw-email-confirmation.html
+++ b/biw-email-confirmation.html
@@ -6,6 +6,13 @@
   	<meta content="" name="keywords">
   	<meta content="" name="description">
 	<style>
+
+		.btn {
+			background-color: #1f7599;
+		}			
+		.btn:hover {
+			background-color: #32c2ec;
+		}
 		@media (min-width: 350px) {
 			#main .col-2 {
 				padding: 30px!important;
@@ -41,6 +48,13 @@
 </head>
 	<body style="margin: 0; padding: 0; height: 100%">
 		<style>
+			
+			.btn {
+				background-color: #1f7599;
+			}
+			.btn:hover {
+				background-color: #32c2ec;
+			}
 			@media (min-width: 350px) {
 				#main .col-2 {
 					padding: 30px!important;
@@ -89,7 +103,7 @@
 								<h1 style="color: #0c7a91; font-size: 20px; text-align: center; line-height: 1;">BIW Email Confirmation</h1>
 								<p style="margin-top: 20px; color: #9ba3b1; font-size: 13px; text-align: center;">Before we complete your subcribtion to our newsletter, please confirm your email address by pressing the confirm button below.</p>
 								<p style=" margin-top: 50px; text-align: center;">
-									<a href="#" style="color: #fff; background-color: #1f7599; font-size: 14px; text-decoration: none; padding-top: 10px; padding-bottom: 10px; padding-left: 30px; padding-right: 30px;">Confirm</a>
+									<a href="#" class="btn" style="color: #fff; font-size: 14px; text-decoration: none; padding-top: 10px; padding-bottom: 10px; padding-left: 30px; padding-right: 30px;">Confirm</a>
 								</p>
 							</td>
 						</tr>
